fixing show_profile alignments, yeah!

--- a/app/assets/stylesheets/font.css
+++ b/app/assets/stylesheets/font.css
@@ -105,6 +105,7 @@ li.user-profile-poems{
 div.profile-show-poems{
   text-align:center;
   padding-bottom: 10px;
+  padding-top: 18px;
 }
 
 dl.show-poems {
